--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Google Font Previewer for Chrome",
-  "version": "1.81",
+  "version": "1.83",
   "description": "Lets you choose a font from the Google Font directory with a few text styling options, and preview them on the current tab.",
   "permissions": [
     "tabs", "http://*/*", "https://*/*"
@@ -9,5 +9,8 @@
       "default_title": "Changes the page font to desired Google Font API face.",
       "default_icon": "font_api.gif",
       "popup": "popup.html"
-  }
+  },
+  "icons": { "16": "icon16.png",
+             "48": "icon48.png",
+            "128": "icon128.png"}
 }
