--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "Google Font Previewer for Chrome",
-  "version": "1.90",
+  "version": "1.91",
+  "manifest_version": 2,
   "description": "Lets you choose a font from the Google Font directory with a few text styling options, and preview them on the current tab.",
   "permissions": [
     "tabs", "http://*/*", "https://*/*"
@@ -8,8 +9,9 @@
   "browser_action": {
       "default_title": "Changes the page font to desired Google Font API face.",
       "default_icon": "font_api.gif",
-      "popup": "popup.html"
+      "default_popup": "popup.html"
   },
+  "content_security_policy": "script-src 'self' https://www.googleapis.com/; object-src 'self'",
   "icons": { "16": "icon16.png",
              "48": "icon48.png",
             "128": "icon128.png"}
