--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,29 @@
 {
   "name": "Google Font Previewer for Chrome",
   "version": "2.0.2",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "description": "Lets you choose a font from the Google Font directory with a few text styling options, and preview them on the current tab.",
   "permissions": [
-    "tabs", "http://*/*", "https://*/*"
+    "scripting"
   ],
-  "browser_action": {
-      "default_title": "Changes the page font to desired Google Font API face.",
-      "default_icon": {
-        "19": "icon_toolbar.png",
-        "38": "icon_toolbar@2x.png"
-      },
-      "default_popup": "popup.html"
+  "host_permissions": [
+    "http://*/*",
+    "https://*/*"
+  ],
+  "action": {
+    "default_title": "Changes the page font to desired Google Font API face.",
+    "default_icon": {
+      "19": "icon_toolbar.png",
+      "38": "icon_toolbar@2x.png"
+    },
+    "default_popup": "popup.html"
   },
-  "content_security_policy": "script-src 'self' https://www.googleapis.com/; object-src 'self'",
-  "icons": { "16": "icon16.png",
-             "48": "icon48.png",
-            "128": "icon128.png"}
+  "content_security_policy": {
+    "extension_pages": "default-src 'self'; connect-src 'self' https://www.googleapis.com; font-src 'self' https://fonts.gstatic.com; style-src 'self' https://fonts.googleapis.com"
+  },
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  }
 }
