--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Google Font Previewer for Chrome",
-  "version": "2.0.2",
+  "version": "2.1.0",
   "manifest_version": 2,
-  "description": "Lets you choose a font from the Google Font directory with a few text styling options, and preview them on the current tab.",
+  "description": "Lets you choose a font from the Google Font directory with a few text styling options and preview the font styles on the current tab.",
   "permissions": [
     "tabs", "http://*/*", "https://*/*"
   ],
